--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
     <script language="javascript" src="admin/inc-script/common.js"></script>
+    <script src="logging.js"></script>
     <title>BBDC</title>
 </head>
 
@@ -31,10 +32,11 @@
                     <tr valign="top">
 
                         <td style="background-color: white;">
-                            <a href="Home.html" target="mainFrame"><img src="image/logo-booking.gif"></a>
+                            <a href="Home.html" target="mainFrame"><img id="logo-booking"
+                                    src="image/logo-booking.gif"></a>
                         </td>
                         <td style="background-color: white;">
-                            <a href="Home.html" target="mainFrame"><img src="image/logo-title.gif"></a>
+                            <a href="Home.html" target="mainFrame"><img id="logo-title" src="image/logo-title.gif"></a>
                         </td>
 
 
@@ -121,6 +123,7 @@
                     cursor: pointer;
                     margin: 0px;
                 }
+
             </style>
             <div width="150px">
                 <!-- Begin Enrolment Process -->
@@ -132,7 +135,8 @@
                         <ul class="subListOverall">
                             <li class="clicklableItem" onclick="gotoGeneral()">
 
-                                <a href="general.html" class="sidelinkbold" target="mainFrame"><span class="redText">Logout</span></a>
+                                <a href="general.html" class="sidelinkbold" target="mainFrame"><span
+                                        class="redText">Logout</span></a>
                             </li>
 
                             <li class="clicklableItem" onclick="gotoGeneral()">
@@ -183,14 +187,15 @@
                         <ul class="subListOverall">
                             <li class="clicklableItem" onclick="gotoBooking()">
 
-                                <a href="booking/bookingmainpage.html" class="sidelinkbold" target="mainFrame">Theory Training
+                                <a href="booking/bookingmainpage.html" class="sidelinkbold" target="mainFrame">Theory
+                                    Training
 
                                 </a>
                             </li>
 
                             <li class="clicklableItem" onclick="gotoGeneral()">
 
-                                <a href="general.html" class="sidelinkbold" target="mainFrame">Theory Test 
+                                <a href="general.html" class="sidelinkbold" target="mainFrame">Theory Test
 
                                 </a>
                             </li>
@@ -217,7 +222,8 @@
                             </li>
                             <li class="clicklableItem" onclick="gotoGeneral()">
 
-                                <a href="general.html" class="sidelinkbold" target="mainFrame">Traffic Police Simulator Booking</a>
+                                <a href="general.html" class="sidelinkbold" target="mainFrame">Traffic Police Simulator
+                                    Booking</a>
                             </li>
                         </ul>
                     </li>
@@ -231,7 +237,8 @@
                         <ul class="subListOverall">
                             <li class="clicklableItem" onclick="gotoGeneral()">
 
-                                <a href="general.html" class="sidelinkbold" target="mainFrame">Practical Training Handbook
+                                <a href="general.html" class="sidelinkbold" target="mainFrame">Practical Training
+                                    Handbook
                                 </a>
                             </li>
                         </ul>
@@ -242,7 +249,7 @@
                         <ul class="subListOverall">
                             <li class="clicklableItem" onclick="gotoGeneral()">
 
-                                <a href="general.html" class="sidelinkbold" target="mainFrame">Booking Statement 
+                                <a href="general.html" class="sidelinkbold" target="mainFrame">Booking Statement
                                 </a>
                             </li>
 
@@ -257,12 +264,12 @@
                                 <a href="general.html" class="sidelinkbold" target="mainFrame">Cancellations</a>
                             </li>
                         </ul>
-                    <script>
-                        function gotoGeneral() {
-                            return self.frames['mainFrame'].location.href = 'General.html'
-                        }
-                    </script>
-            
+                        <script>
+                            function gotoGeneral() {
+                                return self.frames['mainFrame'].location.href = 'General.html'
+                            }
+                        </script>
+
                 </ul>
                 <!--<SCRIPT LANGUAGE=JAVASCRIPT SRC="../admin/inc-script/DisableRightMouseClick.js"></SCRIPT>-->
 
