--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         </ul>
                         <script>
                             function gotoGeneral() {
-                                return self.frames['mainFrame'].location.href = 'General.html'
+                                return self.frames['mainFrame'].location.href = 'general.html'
                             }
                         </script>
 
